# g474re_tb6612_nucleo_control_foc_board

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32G474XX_FLASH.ld  g474re_tb6612_nucleo_control_foc_board.code-workspace  g474re_tb6612_nucleo_control_foc_board.ioc  nucleo_control_foc_board.cfg
Core/Inc/: FreeRTOSConfig.h  main.h  mt6835.h  profiling.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tasks.h  tb6612.h
Core/Src/: app_freertos.c  lib_usbpd.c  main.c  mt6835.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tasks.c  tb6612.c
USBPD/: usbpd_devices_conf.h
USBPD/App/: usbpd_dpm_core.c  usbpd_pdo_defs.h  usbpd_pwr_if.c
cmake/stm32cubemx/: CMakeLists.txt
stm32_libraries/current_sense/: current_sense.c  current_sense.h
stm32_libraries/filters/: filters.c  filters.h
stm32_libraries/mt6835/: mt6835.c
stm32_libraries/protocols/: cobs.h  protocol.h  protocol_generated.h
stm32_libraries/st7735/: st7735.c  st7735.h
stm32_libraries/usb_pd_lib/: lib_usbpd.h
